--- a/index.html
+++ b/index.html
@@ -18,17 +18,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 
     <!-- Nosso CSS -->
-    <link rel="stylesheet" href="/assets/css/global.css">
-    <link rel="stylesheet" href="/assets/css/pokedex.css">
+    <link rel="stylesheet" href="assets//css/global.css">
+    <link rel="stylesheet" href="assets/css/pokedex.css">
 </head>
 
 <body>
     <section class="content">
         <h1>Pokedex</h1>
+        <ol id="selectedPokemons" class="pokemonSelected">
+            <!-- ..... Pokemons here ..... -->
+        </ol>
+        <div class="pokemon-content">
+      
 
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
         </ol>
+        </div>
 
         <div class="pagination">
             <button id="loadMoreButton" type="button">
@@ -38,9 +44,9 @@
     </section>
 
     <!-- Nosso JS -->
-    <script src="/assets/js/pokemon-model.js"></script>
-    <script src="/assets/js/poke-api.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script type="module" src="assets/js/pokemon-model.js"></script>
+    <script type="module" src="assets/js/poke-api.js"></script>
+    <script type="module" src="assets/js/main.js"></script>
 </body>
 
 </html>
