--- a/details.html
+++ b/details.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
+<style>
+    table, th, td{
+        table-layout: auto;
+        text-align: left;
+        scroll-padding-right: 15px;
+    }
+    table {
+        width: 100%;
+    }
+    th, td {
+        padding-right: 1rem;
+    }
+</style>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" contentDetails="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
 
     <!--Normalize CSS-->
@@ -23,25 +35,16 @@
 </head>
 
 <body>
-    <section class="content">
-        <h1>Pokedex</h1>
-
-        <ol id="pokemonList" class="pokemons">
-            <!-- ..... Pokemons here ..... -->
-        </ol>
-
-        <div class="pagination">
-            <button id="loadMoreButton" type="button">
-                Load More
-            </button>
+    <section class="contentDetails">
+        <div id="pokemonDetail">
+            
         </div>
-
     </section>
 
     <!-- Nosso JS -->
     <script src="/asserts/js/pokemon-model.js"></script>
     <script src="/asserts/js/poke-api.js"></script>
-    <script src="/asserts/js/main.js"></script>
+    <script src="/asserts/js/details.js"></script>
 </body>
 
 </html>
