--- a/index.html
+++ b/index.html
@@ -17,29 +17,148 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 
-    <!-- Nosso CSS -->
-    <link rel="stylesheet" href="/assets/css/global.css">
-    <link rel="stylesheet" href="/assets/css/pokedex.css">
+    <!-- Link CSS -->
+    <link rel="stylesheet" href="./assets/css/global.css">
+    <link rel="stylesheet" href="./assets/css/pokedex.css">
+    <link rel="stylesheet" href="./assets/css/pokemonColors.css">
 </head>
 
 <body>
     <section class="content">
-        <h1>Pokedex</h1>
+        <h1>Pokédex</h1>
 
-        <ol id="pokemonList" class="pokemons">
-            <!-- ..... Pokemons here ..... -->
+        <ol class="pokemons">
+
+            <li id="bulbasaur" class="pokemon">
+                <span class="numberGrass">#001</span>
+                <span class="name">Bulbasaur</span>
+
+                <div class="detail">
+                    <ol class="types">
+                        <li class="type">Grass</li>
+                        <li class="type">Poison</li>
+                    </ol>
+
+                    <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png" alt="Bulbasaur">
+
+                </div>
+            </li>
+
+            <li id="ivysaur" class="pokemon">
+                <span class="numberGrass">#002</span>
+                <span class="name">Ivysaur</span>
+
+                <div class="detail">
+                    <ol class="types">
+                        <li class="type">Grass</li>
+                        <li class="type">Poison</li>
+                    </ol>
+                    <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/002.png" alt="Ivysaur">
+                </div>
+            </li>
+
+            <li id="venusaur" class="pokemon">
+                <span class="numberGrass">#003</span>
+                <span class="name">Venusaur</span>
+
+                <div class="detail">
+                    <ol class="types">
+                        <li class="type">Grass</li>
+                        <li class="type">Poison</li>
+                    </ol>
+                    <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/003.png" alt="Venusaur">
+                </div>
+            </li>
+
+            <li id="charmander" class="pokemon">
+                <span class="numberFire">#004</span>
+                <span class="name">Charmander</span>
+
+                <div class="detail">
+                    <ol class="types">
+                        <li class="type">Fire</li>
+                    </ol>
+                    <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/004.png" alt="Charmander">
+                </div>
+            </li>
+
+            <li id="charmeleon" class="pokemon">
+                <span class="numberFire">#005</span>
+                <span class="name">Charmeleon</span>
+
+                <div class="detail">
+                    <ol class="types">
+                        <li class="type">Fire</li>
+                    </ol>
+                    <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/005.png" alt="Charmeleon">
+                </div>
+            </li>
+
+            <li id="charizard" class="pokemon">
+                <span class="numberFire">#006</span>
+                <span class="name">Charizard</span>
+
+                <div class="detail">
+                    <ol class="types">
+                        <li class="type">Fire</li>
+                        <li class="type">Flying</li>
+                    </ol>
+                    <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/006.png" alt="Charizard">
+                </div>
+            </li>
+
+            <li id="squirtle" class="pokemon">
+                <span class="numberWater">#007</span>
+                <span class="name">Squirtle</span>
+
+                <div class="detail">
+                    <ol class="types">
+                        <li class="type">Water</li>
+                    </ol>
+                    <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/007.png" alt="Squirtle">
+                </div>
+            </li>
+
+            <li id="wartortle" class="pokemon">
+                <span class="numberWater">#008</span>
+                <span class="name">Wartortle</span>
+
+                <div class="detail">
+                    <ol class="types">
+                        <li class="type">Water</li>
+                    </ol>
+                    <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/008.png" alt="wartortle">
+                </div>
+            </li>
+
+            <li id="blastoise" class="pokemon">
+                <span class="numberWater">#009</span>
+                <span class="name">Blastoise</span>
+
+                <div class="detail">
+                    <ol class="types">
+                        <li class="type">Water</li>
+                    </ol>
+                    <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/009.png" alt="blastoise">
+                </div>
+            </li>
+
+            <li id="pikachu" class="pokemon">
+                <span class="numberEletric">#010</span>
+                <span class="name">Pikachu</span>
+
+                <div class="detail">
+                    <ol class="types">
+                        <li class="type">Eletric</li>
+                    </ol>
+                    <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/025.png" alt="blastoise">
+                </div>
+            </li>
+
         </ol>
-
-        <div class="pagination">
-            <button id="loadMoreButton" type="button">
-                Load More
-            </button>
-        </div>
     </section>
 
-    <!-- Nosso JS -->
-    <script src="/assets/js/pokemon-model.js"></script>
-    <script src="/assets/js/poke-api.js"></script>
+    <!-- Link JS -->
     <script src="/assets/js/main.js"></script>
 </body>
 
