--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- Font Roboto -->
+    <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
@@ -20,6 +20,7 @@
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/pokedex.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -38,9 +39,69 @@
     </section>
 
     <!-- Nosso JS -->
+    <script src="/assets/js/modal.js"></script>
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
     <script src="/assets/js/main.js"></script>
+
+   
+
+    <div id="overlay" onclick="closeModal()"></div>
+
+    <div id="customModal">
+
+        <button onclick="closeModal()" class="close"><i class='bx bx-x'></i></button>
+        <div class="modal-header">
+            <div class="flex header-icons">
+                <i class='bx bx-left-arrow-alt'></i>
+                <i class='bx bx-heart'></i>
+            </div>
+
+            <div class="flex header-text">
+                <div>
+                    <h2 class="name">Card Name</h2>
+                    <ol class="types flex">
+                        
+                    </ol>
+                </div>
+                <span class="detail">#01</span>
+            </div>
+
+            <div class="image-box">
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
+                    alt="">
+            </div>
+
+
+        </div>
+
+        <div class="modal-content">
+            <h3>About</h3>
+            <div class="flex">
+                <span class="label">Number</span>
+                <span class="value number">#01</span>
+            </div>
+
+            <div class="flex">
+                <span class="label">Name</span>
+                <span class="value name">Pokemon</span>
+            </div>
+
+            <div class="flex">
+                <span class="label">Type</span>
+                <span class="value typ">1.Bulet 2.Tolet 3.Dolet</span>
+            </div>
+
+            <div class="flex">
+                <span class="label">Length</span>
+                <span class="value length">1.Bulet 2.Tolet 3.Dolet</span>
+            </div>
+        </div>
+    </div>
+
+    
 </body>
+
+
 
 </html>
