--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Adicionando uma Imagem ao Title -->
+    <link rel="shortcut icon" type="imagex/png" href="./assets/img/dragon-solid.ico">
     <title>Pokedex</title>
 
     <!-- Normalize CSS -->
@@ -18,13 +21,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 
     <!-- Nosso CSS -->
+    <link rel="stylesheet" href="/assets/css/card.css">
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/pokedex.css">
 </head>
 
 <body>
     <section class="content">
-        <h1>Pokedex</h1>
+        
+        <h1><img src="assets/img/pokebola.png" alt="Imagem da pokebola" class="pokebola" width="20px" height="20px"> Pokedex</h1>
+
+        <hr>
 
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
@@ -35,6 +42,14 @@
                 Load More
             </button>
         </div>
+
+        <hr>
+
+        <footer class="footer">
+            Mateus Ortega Mendes | DIO | Renan Johannsen de Paula <br>
+            Criando uma Pokedex <br>
+            @2024
+        </footer>
     </section>
 
     <!-- Nosso JS -->
