--- a/index.html
+++ b/index.html
@@ -16,14 +16,6 @@
       referrerpolicy="no-referrer"
     />
 
-    <!-- Font Roboto -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap"
-      rel="stylesheet"
-    />
-
     <!-- CSS -->
     <link rel="stylesheet" href="./src/css/global.css" />
     <link rel="stylesheet" href="./src/css/pokedex.css" />
@@ -34,13 +26,17 @@
       <img src="./assets/img/logo.png" />
 
       <ol id="pokemonList" class="pokemons">
-        <!-- ..... Pokemons here ..... -->
+        <!-- ..... Pokemon list ..... -->
       </ol>
 
       <div class="pagination">
         <button id="loadMoreButton" type="button">Load More</button>
       </div>
     </section>
+
+    <div id="overlay" class="overlay"></div>
+    <div id="pokemonDetail" class="pokemonDetail"></div>
+    <!-- ..... Pokemon details ..... -->
 
     <!-- JS -->
     <script src="./src/js/pokemon-model.js"></script>
