--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./src/css/global.css" />
     <link rel="stylesheet" href="./src/css/pokedex.css" />
+    <link rel="stylesheet" href="./src/css/pokedetail.css" />
   </head>
 
   <body>
