--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
+    <meta name="author" content="PlopesK" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./assets/img/pokeball.ico" />
@@ -29,6 +30,28 @@
   </head>
 
   <body>
+    <div class="settings">
+      <button class="cog">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          x="0px"
+          y="0px"
+          viewBox="0 0 72.5 72.5"
+          enable-background="new 0 0 72.5 72.5"
+          aria-hidden="true"
+          class="triangle"
+        >
+          <g id="triangle">
+            <path d="M0,0l72.5,72.5H0V0z"></path>
+          </g>
+        </svg>
+        <p>
+          <a href="https://github.com/PlopesK/Pokedex" target="_blank"
+            ><i class="fab fa-github"></i
+          ></a>
+        </p>
+      </button>
+    </div>
     <section class="content">
       <img id="logo" src="./assets/img/logo.png" />
 
