--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
         </div>
     </section>
 
+    <div class="overlay" id="overlay">
+      <button class="close-btn" onclick="closeOverlay()">Fechar</button>
+  </div>
+
     <!-- Nosso JS -->
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
